Cascading Change Log

1.2-WIP

  Added c.p.a.Count sub-assembly for optimizing counting processes.

  Added c.s.CascadingStatus.Status.Skipped state so skipped c.f.Flow instances can be identified.

  Added c.f.Flow#setSubmitPriority() to allow for custom order of Flows.

  Fixed bug where c.t.MultiSourceTap#pathExists() would return true if one of the child paths was missing.

  Changed c.c.CascadeConnector to fail if it detects cycles in the set of given c.f.Flow instances to manage.

  Disable Hadoop warning about not using "options parser".

  Added #isSource() and #isSink() methods to c.s.Scheme so that some Scheme instances can report they are either
  sink or source only.

  Added c.t.Fields#merge() method to allow simple merging of Fields instances which discarding duplicate names and
  positions.

  Added convenience methods on c.c.CascadeConnector#connect() and c.f.FlowConnector#connect() to accept
  j.u.Collection<Flow> and j.u.Collection<Pipe> arguments, respectively.

  Added Riffle support via the new c.f.ProcessFlow wrapper class. Riffle allows for non-Cascading jobs and/or
  sets of iterative Flows to participate in a c.c.Cascade.

  Changed c.c.Cascade instances to disable parallel execution if more than one Flow is a local only job.

  Added c.c.Cascade#setMaxConcurrentFlows() property that limits the number of concurrently running Flows.

  Added c.c.Cascade#writeDOT method for visualizing the dependencies between flow instances.

  Added c.p.a.Unique sub-assembly for optimizing de-duping processes.

  Changed c.s.TextDelimited to accept Fields.ALL or Fields.UNKNOWN for arbitrarily sized or unknown records.

  Changed c.t.MultiSourceTap to support #openForRead().

  Added c.t.Comparison and c.t.StreamComparator interfaces which allow for custom types to be
  lazily deserialized during sort comparisons.

  Added support for lazy deserialization during c.t.Tuple comparisons while shuffle sorting.

unreleased
